feat: Update to Java 21 chore: update dependencies and maven plugins